--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Custom ignores
+*.csv
+
+##################""
+# Template ignores
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
