--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ jupyter-core==4.9.2
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
 kiwisolver==1.4.0
+lightgbm==3.3.2
 MarkupSafe==2.1.0
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
@@ -56,6 +57,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.0.1
+plotly==5.6.0
 prometheus-client==0.13.1
 prompt-toolkit==3.0.28
 protobuf==3.19.4
@@ -85,6 +87,7 @@ sklearn==0.0
 smmap==5.0.0
 stack-data==0.2.0
 streamlit==1.6.0
+tenacity==8.0.1
 terminado==0.13.1
 testpath==0.6.0
 threadpoolctl==3.1.0
@@ -102,4 +105,3 @@ wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.2
 zipp==3.7.0
-plotly
