--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,113 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+click = "==7.1.2"
+altair = "==4.2.0"
+argon2-cffi = "==21.3.0"
+argon2-cffi-bindings = "==21.2.0"
+astor = "==0.8.1"
+asttokens = "==2.0.5"
+attrs = "==21.4.0"
+autopep8 = "==1.6.0"
+backcall = "==0.2.0"
+base58 = "==2.1.1"
+bleach = "==4.1.0"
+blinker = "==1.4"
+cachetools = "==5.0.0"
+certifi = "==2021.10.8"
+cffi = "==1.15.0"
+charset-normalizer = "==2.0.12"
+cycler = "==0.11.0"
+debugpy = "==1.5.1"
+decorator = "==5.1.1"
+defusedxml = "==0.7.1"
+entrypoints = "==0.4"
+executing = "==0.8.3"
+fonttools = "==4.31.1"
+gitdb = "==4.0.9"
+idna = "==3.3"
+importlib-metadata = "==4.11.2"
+ipykernel = "==6.9.1"
+ipython = "==8.1.0"
+ipywidgets = "==7.6.5"
+jedi = "==0.18.1"
+joblib = "==1.1.0"
+jsonschema = "==4.4.0"
+jupyter-client = "==7.1.2"
+jupyter-core = "==4.9.2"
+jupyterlab-pygments = "==0.1.2"
+jupyterlab-widgets = "==1.0.2"
+kiwisolver = "==1.4.0"
+lightgbm = "==3.3.2"
+matplotlib = "==3.5.1"
+matplotlib-inline = "==0.1.3"
+mistune = "==0.8.4"
+nbclient = "==0.5.11"
+nbconvert = "==6.4.2"
+nbformat = "==5.1.3"
+nest-asyncio = "==1.5.4"
+nltk = "==3.7"
+notebook = "==6.4.8"
+numpy = "==1.22.2"
+pandas = "==1.4.1"
+pandocfilters = "==1.5.0"
+parso = "==0.8.3"
+pexpect = "==4.8.0"
+pickleshare = "==0.7.5"
+plotly = "==5.6.0"
+prometheus-client = "==0.13.1"
+prompt-toolkit = "==3.0.28"
+protobuf = "==3.19.4"
+ptyprocess = "==0.7.0"
+pure-eval = "==0.2.2"
+pyarrow = "==7.0.0"
+pycodestyle = "==2.8.0"
+pycparser = "==2.21"
+pydeck = "==0.7.1"
+pyparsing = "==3.0.7"
+pyrsistent = "==0.18.1"
+python-dateutil = "==2.8.2"
+pytz = "==2021.3"
+pytz-deprecation-shim = "==0.1.0.post0"
+pyzmq = "==22.3.0"
+regex = "==2022.1.18"
+requests = "==2.27.1"
+scikit-learn = "==1.0.2"
+scipy = "==1.8.0"
+seaborn = "==0.11.2"
+semver = "==2.13.0"
+six = "==1.16.0"
+sklearn = "==0.0"
+smmap = "==5.0.0"
+stack-data = "==0.2.0"
+streamlit = "==1.6.0"
+tenacity = "==8.0.1"
+terminado = "==0.13.1"
+testpath = "==0.6.0"
+threadpoolctl = "==3.1.0"
+toml = "==0.10.2"
+toolz = "==0.11.2"
+tornado = "==6.1"
+tqdm = "==4.63.0"
+traitlets = "==5.1.1"
+tzdata = "==2021.5"
+tzlocal = "==4.1"
+urllib3 = "==1.26.8"
+validators = "==0.18.2"
+watchdog = "==2.1.6"
+wcwidth = "==0.2.5"
+webencodings = "==0.5.1"
+widgetsnbextension = "==3.5.2"
+xlrd = "==2.0.1"
+zipp = "==3.7.0"
+GitPython = "==3.1.27"
+ipython_genutils = "==0.2.0"
+Jinja2 = "==3.0.3"
+MarkupSafe = "==2.1.0"
+Pillow = "==9.0.1"
+Pygments = "==2.11.2"
+Pympler = "==1.0.1"
+Send2Trash = "==1.8.0"
 
 [dev-packages]
 autopep8 = "*"
